fix problem with too long list and footer

--- a/src/style/Footer.scss
+++ b/src/style/Footer.scss
@@ -2,7 +2,7 @@
 
 .footer-wrapper{
     width: 95%;
-    margin: auto;
+    margin: 40px auto 0 auto;
     footer{
         width: 100%;
         margin: auto;
