--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -10,6 +10,6 @@ body{
     font-family: 'Ubuntu', sans-serif;
     padding: 0;
     .content{
-        height: 100vh;
+        min-height: 100vh;
     }
 }
